[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://World/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/Tutorial.tscn" type="PackedScene" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 1 )
game_scene = ExtResource( 2 )
settings_scene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 168.0
color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 107.0
margin_top = 45.0
margin_right = 192.0
margin_bottom = 59.0
rect_scale = Vector2( 1.2, 1.2 )
text = "The Labyrinth"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 130.0
margin_top = 72.0
margin_right = 188.0
margin_bottom = 92.0
text = "Start"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 127.0
margin_top = 126.0
margin_right = 190.0
margin_bottom = 146.0
text = "Settings"

[node name="TutorialButton" type="Button" parent="."]
margin_left = 115.0
margin_top = 99.0
margin_right = 204.0
margin_bottom = 119.0
text = "How To Play"

[node name="Tutorial" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="focus_entered" from="StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="focus_entered" from="SettingsButton" to="." method="_on_SettingsButton_focus_entered"]
[connection signal="focus_entered" from="TutorialButton" to="." method="_on_TutorialButton_focus_entered"]
